--- a/3/css/styles.css
+++ b/3/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-size: 16px;
     font-family: 'Source Sans Pro', sans-serif;
     color: #1a1a1a;
-    background-color: #599e4b;
+    background-color: #2d545e;
 }
 
 
@@ -19,7 +19,7 @@ body {
 }
 
 .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color: #fce29e;
+    background-color: #acb7ae;
 }
 
 .navbar-collapse {
@@ -57,7 +57,7 @@ body {
 
 #nav-list a:hover {
     color: #202020;
-    background-color: #fce29e;
+    background-color: #51d0de;
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
