--- a/3/css/styles_basic.css
+++ b/3/css/styles_basic.css
@@ -2,7 +2,7 @@ body {
     font-size: 16px;
     font-family: 'Source Sans Pro', sans-serif;
     color: #1a1a1a;
-    background-color: #599e4b;
+    background-color: #2d545e;
 }
 
 
