--- a/3/css/styles_basic.css
+++ b/3/css/styles_basic.css
@@ -9,7 +9,7 @@ body {
 /** HEADER **/
 
 #header-nav {
-    background-color: #c98715;
+    background-color:   #0f2862;
     border-radius: 0;
     border: 0;
 }
