--- a/3/css/styles_basic.css
+++ b/3/css/styles_basic.css
@@ -45,7 +45,7 @@ body {
 }
 
 #nav-list {
-    background-color: #e4af34;
+    background-color: #acb7ae;
 }
 
 #nav-list a {
@@ -88,7 +88,7 @@ body {
 }
 
 #main-section {
-    background-color: #82d06b;
+    background-color: #acb7ae;
     box-shadow: 0 0 50px #0f5900;
     padding: 30px;
 }
